Solve contrast issues

--- a/src/pages/contacts/component/style.module.css
+++ b/src/pages/contacts/component/style.module.css
@@ -79,7 +79,8 @@
   padding: 0.6rem;
   border-radius: 1rem;
   text-transform: uppercase;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
   border: none;
   margin-bottom: 2rem;
 }
